# qa_guru_lesson_18

./: .gitignore  pyproject.toml  pytest.ini
api/: api_helpers.py  api_session.py
model/: steps.py
tests/: conftest.py  test_demoshop.py
ui/: cart_methods.py
utils/: utils.py
