[project]
name = "qa-guru-lesson-18"
version = "0.1.0"
description = ""
authors = [
    {name = "ilyashe",email = "ilya.shebanoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "selene (==2.0.0rc9)",
    "allure-pytest (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
